[package]
name = "night"
version = "0.1.0"
edition = "2021"

description = "Left-to-right stack-based language interpreter"
repository = "https://github.com/ZippyMagician/Night"
readme = "README.md"

categories = [ "parser", "language", "stack-based" ]
keywords = [ "parser", "language" ]

[[bin]]
name = "night"
path = "src/main.rs"

[dependencies]
phf = { version = "0.11.2", features = ["macros"] }
# clap = "2.33.3"
# rand = "0.8.3
